<resources>
    <string name="app_name">ListPractise</string>
    <string name="name">Name:</string>
    <string name="number">Number:</string>
    <string name="description">Description:</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="android">ANDROID</string>
    <string name="ethical_hacking">ETHICAL_HACKING</string>
    <string name="web_development">WEB_DEVELOPMENT</string>
    <string name="Mechanics">MECHANICS</string>
    <string-array name="topics">
        <item>Android</item>
        <item>Ethical-Hacking</item>
        <item>Web-Development</item>
        <item>Mechanics</item>
    </string-array>
</resources>
