<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/andr" android:title="@string/android"
        android:orderInCategory="100"/>
    <item android:id="@+id/ethic" android:title="@string/ethical_hacking"
        android:orderInCategory="100"/>
    <item android:id="@+id/web" android:title="@string/web_development"
        android:orderInCategory="100"/>
    <item android:id="@+id/mechi" android:title="@string/Mechanics"
        android:orderInCategory="100"/>

</menu>
